--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container col-6 col-md-3 ">
     <h2>Registro de Aluno</h2>
+</div>
+<div>
     <form class="container col-6 col-md-3" method="POST" action="">
         {{ form.csrf_token() }}
         <div class="form-group">
