--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container col-6 col-md-3">
+<div class="container col-md col-md-offset-4">
     <h2>Registro de Aluno</h2>
 </div>
     <form class="container col-6 col-md-3" method="POST" action="">
@@ -73,6 +73,26 @@
             {{ form.complement_address.label }}
             {{ form.complement_address(class="form-control") }}
         </div>
+        <div class="form-group  ">
+            {{ form.tel.label }}
+            {{ form.tel(class="form-control") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.tel_message.label }}
+            {{ form.tel_message(class="form-control") }}
+        </div>
+         <div class="form-group  ">
+            {{ form.personal_email.label }}
+            {{ form.personal_email(class="form-control") }}
+        </div>
+         <div class="form-group  ">
+            {{ form.message_email.label }}
+            {{ form.message_email(class="form-control") }}
+        </div>
+        <div class="container col-6 col-md-3">
+            <h2>Informações sobre saúde</h2>
+        </div>
+
         {% for field, errors in form.errors.items() %}
             <div class="alert alert-danger" role="alert">
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
