--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 {% block content %}
 <H1 class="col-md col-md-offset-4" >Bem vindo</H1>
 
-<a href="{{url_for('register')}}" > Registro</a>
+<a href="{{url_for('register')}}" >Registro</a>
 
-<a href="{{url_for('register')}}" > Registro</a>
+<a href="{{url_for('sub')}}" >Inscrição</a>
 
 
 
