--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -1,14 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container col-md col-md-offset-4">
-    <h2>Registro de Aluno</h2>
+    <h2>{{ form.complete_name.data }}</h2>
 </div>
     <form class="container col-6 col-md-3" method="POST" action="">
         {{ form.csrf_token() }}
-        <div class="form-group">
-            {{ form.complete_name.label }}
-            {{ form.complete_name(class="form-control") }}
-        </div>
         <div class="form-group">
             {{ form.social_name.label }}
             {{ form.social_name(class="form-control") }}
