--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <a href="{{url_for('register')}}" >Registro</a>
 
-<a href="{{url_for('sub')}}" >Inscrição</a>
+<a href="{{url_for('student_create')}}" >Inscrição</a>
 
 
 
