--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<nav class="navbar navbar-expand-lg " style="background-color: #e00014;">
+        <img class="icone" id="logo"  src="{{url_for('static', filename='DUFRY_Logo.png')}}"</img>
+</nav>
 <div class="container col-md col-md-offset-4">
     <h2>Registro de Aluno</h2>
 </div>
