--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<nav class="navbar navbar-expand-lg " style="background-color: #e00014;">
-        <img class="icone" id="logo"  src="{{url_for('static', filename='DUFRY_Logo.png')}}"</img>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
+  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" <a href="{{url_for('index')}}"</a>
 </nav>
 <div class="container col-md col-md-offset-4">
     <h2>Registro de Aluno</h2>
