--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
+  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" <a href="{{url_for('index')}}"</a>
+</nav>
 <div class="container col-md col-md-offset-4">
     <h2>{{ form.complete_name.data }}</h2>
 </div>
