--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
+  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" <a href="{{url_for('index')}}"</a>
+</nav>
 <H1 class="col-md col-md-offset-4" >Bem vindo</H1>
 
-<a href="{{url_for('/register')}}" >Registro</a>
 
 <a href="{{url_for('student_create')}}" >Inscrição</a>
 <div>
