--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" <a href="{{url_for('index')}}"</a>
+<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e00014;">
+  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}">
 </nav>
-<div class="container col-md col-md-offset-4">
+<div class="container col-6 col-md-3">
     <h2>Registro de Aluno</h2>
 </div>
     <form class="container col-6 col-md-3" method="POST" action="">
@@ -88,14 +88,14 @@
             {{ form.message_email.label }}
             {{ form.message_email(class="form-control") }}
         </div>
-        <div class="container col-6 col-md-3">
+        <div class="col-md col-md-offset-4">
             <h2>Informações sobre saúde</h2>
         </div>
         <div class="form-group  ">
             {{ form.vaccine_covid.label }}
             {{ form.vaccine_covid(class="form-control") }}
         </div>
-        <div class="container col-6 col-md-3">
+        <div class="col-md col-md-offset-4">
             <h2>Informações sobre composição familiar</h2>
         </div>
          <div class="form-group  ">
