--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" <a href="{{url_for('index')}}"</a>
+  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}">
 </nav>
-<div class="container col-md col-md-offset-4">
+<div class="container col-6 col-md-3">
     <h2>{{ form.complete_name.data }}</h2>
 </div>
     <form class="container col-6 col-md-3" method="POST" action="">
@@ -84,36 +84,36 @@
             {{ form.message_email.label }}
             {{ form.message_email(class="form-control") }}
         </div>
-        <div class="container col-6 col-md-3">
+        <div class="col-md col-md-offset-4"">
             <h2>Informações sobre saúde</h2>
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.vaccine_covid.label }}
             {{ form.vaccine_covid(class="form-control") }}
         </div>
-        <div class="container col-6 col-md-3">
+        <div class="col-md col-md-offset-4">
             <h2>Informações sobre composição familiar</h2>
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.mame_mom.label }}
             {{ form.mame_mom(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.profession_mom.label }}
             {{ form.profession_mom(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.scholarity_mom.label }}
             {{ form.scholarity_mom(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.mame_dad.label }}
             {{ form.mame_dad(class="form-control") }}
-        </div> <div class="form-group  ">
+        </div> <div class="form-group">
             {{ form.profession_dad.label }}
             {{ form.profession_dad(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.scholarity_dad.label }}
             {{ form.scholarity_dad(class="form-control") }}
         </div>
