--- a/templates/register.html
+++ b/templates/register.html
@@ -3,8 +3,8 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
   <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" <a href="{{url_for('index')}}"</a>
 </nav>
-<div class="container col-6 col-md-3 ">
-    <h2>Registro de Aluno</h2>
+<div>
+    <h2 class="container col-6 col-md-3">Registro de Aluno</h2>
 </div>
 <div>
     <form class="container col-6 col-md-3" method="POST" action="">
