atualizando templates e app.py

--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -36,6 +36,10 @@
             {{ form.nacionality.label }}
             {{ form.nacionality(class="form-control") }}
         </div>
+        <div class="form-group  ">
+            {{ form.nacionality_br.label }}
+            {{ form.nacionality_br(class="") }}
+        </div>
          <div class="form-group  ">
             {{ form.state.label }}
             {{ form.state(class="form-control") }}
@@ -85,6 +89,14 @@
             {{ form.personal_email(class="form-control") }}
         </div>
          <div class="form-group  ">
+            {{ form.message_email.label }}
+            {{ form.message_email(class="form-control") }}
+        </div>
+        <div class="form-group  ">
+            {{ form. scholarity_progress.label }}
+            {{ form. scholarity_progress(class="") }}
+        </div>
+        <div class="form-group  ">
             {{ form.message_email.label }}
             {{ form.message_email(class="form-control") }}
         </div>
