--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -32,6 +32,10 @@
             {{ form.nacionality.label }}
             {{ form.nacionality(class="form-control") }}
         </div>
+        <div class="form-group  ">
+            {{ form.nacionality_br.label }}
+            {{ form.nacionality_br(class="") }}
+        </div>
          <div class="form-group  ">
             {{ form.state.label }}
             {{ form.state(class="form-control") }}
@@ -83,6 +87,14 @@
          <div class="form-group  ">
             {{ form.message_email.label }}
             {{ form.message_email(class="form-control") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.scholarity_progress.label }}
+            {{ form.scholarity_progress(class="") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.scholarity_progress.label }}
+            {{ form.scholarity_progress(class="") }}
         </div>
         <div class="col-md col-md-offset-4"">
             <h2>Informações sobre saúde</h2>
