--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -153,6 +153,26 @@
             {{ form.scholarity_dad.label }}
             {{ form.scholarity_dad(class="form-control") }}
         </div>
+        <div class="form-group  ">
+            {{ form.children.label }}
+            {{ form.children(class="") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.many_childrens.label }}
+            {{ form.many_childrens(class="form-control") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.live_whith_parents.label }}
+            {{ form.live_whith_parents(class="") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.lives_whith_other_family.label }}
+            {{ form.lives_whith_other_family(class="form-control") }}
+        </div>
+        <div class="form-group  ">
+            {{ form.many_people_live_house.label }}
+            {{ form.many_people_live_house(class="form-control") }}
+        </div>
 
 
         {% for field, errors in form.errors.items() %}
