--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
+<head>
+<link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
+</head>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}" >
-<H1 class="col-md col-md-offset-4" >Bem vindo</H1>
+  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}"></img>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{{url_for('register')}}">Cadastre-se<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('login')}}">Login</a>
+        </li>
+      </ul>
+  </div>
+</nav>
 
-
-<a href="{{url_for('student_create')}}" >Inscrição</a>
-<div>
+<div class="index">
 
 </div>
-
 
 
 
