atualizando templates e app.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 <title>Portal CTA</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
+{% block head %}
+    {% endblock %}
 </head>
 
 
