--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block content %}
-<head>
+{% block head %}
 <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
-</head>
+{% endblock %}
+{% block content %}
+
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
   <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}"></img>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -23,4 +24,4 @@
 
 
 
-{% endblock %}<
+{% endblock %}
