atualizando templates e app.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,12 @@
         </li>
       </ul>
   </div>
+  <form id="formu" class="d-flex">
+            <input id="inputEmail" class="form-control me-2 bg-white text-black" type="email" placeholder="Login" aria-label="email">
+            <input id="inputSenha"class="form-control me-2 bg-white text-black" type="password" placeholder="senha" aria-label="senha">
+            <button type="submit" id="botaoLogin" onclick="validaForm()">Login</button>
+            <a class="input text-white text-center" id="esqueceusenhaLogin" href="./RecupLogin.html">Esqueceu a senha?</a>
+  </form>
 </nav>
 
 <div class="index">
