--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
   <a  class="logo" href="{{url_for('index')}}"><img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}"></a>
+
+
+  {% if current_user.is_anonymous %}
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -22,6 +25,10 @@
             <button type="submit" id="botaoLogin" onclick="validaForm()">Login</button>
             <a class="input text-white text-center" id="esqueceusenhaLogin" href="./RecupLogin.html">Esqueceu a senha?</a>
   </form>
+  {% else %}
+    <p>Bem-vindo {{current_user.username}}</p>
+    <a href="{{ url_for('logout') }}">Sair</a>
+  {% endif %}
 </nav>
 
 <div class="index">
