--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,8 @@
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
 
-                <form>
-                    {{ form.csrf_token() }}
+                <form action="" method="post">
+                  {{ form.hidden_tag() }}
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                     <span class="h1 fw-bold mb-0">Portal CTA</span>
@@ -38,13 +38,13 @@
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Acesse sua conta</h5>
 
                   <div class="form-outline mb-4">
-                    {{ form.email_login.label }}
-                    {{ form.email_login(class="form-control-lg") }}
+                    {{ form.email.label }}
+                    {{ form.email(class="form-control-lg") }}
                   </div>
 
                   <div class="form-outline mb-4">
-                    {{ form.password_login.label }}
-                    {{ form.password_login(class="form-control-lg") }}
+                    {{ form.password.label }}
+                    {{ form.password(class="form-control-lg") }}
                   </div>
 
                   <div class="pt-1 mb-4">
@@ -52,11 +52,15 @@
                   </div>
 
                   <a class="small text-muted" href="#!">Esqueceu sua senha?</a>
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Não possui uma conta? <a href="#!"
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Não possui uma conta? <a href="{{ url_for('register') }}"
                       style="color: #393f81;">Cadastra-se aqui!</a></p>
                   <a href="#!" class="small text-muted">Termos de uso.</a>
                   <a href="#!" class="small text-muted">Politicas de privacidade</a>
                 </form>
+
+                {% for message in get_flashed_messages() %}
+                  <p style="color: red;">Erro: {{ message }}</p>
+                {% endfor %}
 
               </div>
             </div>
