--- a/templates/register.html
+++ b/templates/register.html
@@ -43,8 +43,8 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div class="form-group">
-            {{ form.submit(class="btn btn-primary")}}
+        <div id="formSubmit" class="form-group">
+            {{ form.submit(class=" btn bg-white text-black -btn-sm justify-content-md-center")}}
         </div>
     </form>
 </div>
