--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}"></img>
+  <img class="logo" src="{{url_for('static', filename='DUFRY_Logo.png')}}"></img>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
