--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 <link rel="stylesheet" href="{{url_for('static', filename='css/forms.css')}}">
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <a  class="logo" href="{{url_for('index')}}"><img class="logo" src="{{url_for('static', filename='DUFRY_lOGO.png')}}"></a>
+  <a  class="logo" href="{{url_for('index')}}"><img class="logo" src="{{url_for('static', filename='DUFRY_Logo.png')}}"></a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
