--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,33 +4,14 @@ body{
 
 }
 
-.img{
-   background-image: url("/static/backgroundindex.png");
-   height: 800px;
-   width: 890px;
-   background-position: left top;
-   margin left: 200px;
-   background-repeat: no-repeat;
-   background-size: contain;
-   background-attachment: scroll;
-
-}
-
-#botaoLogin{
-    box-shadow: 0 0 0 0.05rem #000000;
-
-}
-#botaoLogin:hover {
-    border-color: #000000;
-
+#chamada{
+    font-size: 18px;
+    width: 1000px;
+    font-style: oblique;
+    background-color: #946743;
+    border-radius: 50px;
+    padding: 15px;
+    margin-left: 30px;
 }
 
 
-#inputEmail, #inputSenha{
-    border-color: 	#000000;
-}
-
-#inputEmail:focus, #inputSenha:focus {
-    border-color: 	#000000;
-    box-shadow: 0 0 0 0.1rem #ffffff;
-}
