--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,17 @@
 {% extends "base.html" %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 {% block head %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
-{% endblock %}
-{% block content %}
+
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <a  class="logo" href="{{url_for('index')}}"><img class="logo" src="{{url_for('static', filename='DUFRY_Logo.png')}}"></a>
-
-
-  {% if current_user.is_anonymous %}
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{url_for('register')}}">Cadastre-se<span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('login')}}">Login</a>
-        </li>
-      </ul>
-  </div>
-  {% else %}
-    <p>Bem-vindo {{current_user.username}}</p>
-    <a href="{{ url_for('logout') }}">Sair</a>
-  {% endif %}
-</nav>
 <main>
-  <aside>
-    <div class="img">
-    </div>
-    <h1>Prepare-se para o mecardo de trabalho conosco!</h1>
-  </aside>
+  <div id="chamada">
+        <h1 >Prepare-se para o mecardo de trabalho conosco!</h1>
+  </div>
+
+  <article>
+    <img id="img" src="./static/backgroundindex.png">
+  </article>
 
 </main>
 
@@ -138,7 +120,7 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i>Aeroporto Internacional do RJ- R. D, 865 - Galeão, Rio de Janeiro - RJ, 21941-570</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@example.com
