--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,6 @@
 {% extends "base.html" %}
-{% block content %}
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e00014;">
-  <img class="logo" src="{{url_for('static', filename='DUFRY_Logo.png')}}"></img>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{url_for('register')}}">Cadastre-se<span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('login')}}">Login</a>
-        </li>
-      </ul>
-  </div>
-</nav>
+{% block head %}
+
 
 
 <section class="vh-100" style="background-color: #030303;">
