--- a/templates/register.html
+++ b/templates/register.html
@@ -31,8 +31,8 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="formSubmit" class="form-group">
-            {{ form.submit(class=" btn bg-white text-black -btn-sm justify-content-md-center")}}
+        <div id="formSubmit" class="container col-6 col-md-3">
+            {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
         </div>
     </form>
 </div>
