--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+
+
 <link rel="stylesheet" href="{{url_for('static', filename='css/forms.css')}}">
-
-
 <div class="container col-6 col-md-3">
     <h2>{{ form.complete_name.data }}</h2>
 </div>
@@ -194,7 +194,7 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="formSubmit" class="form-group">
+        <div id="formSubmit" class="container col-6 col-md-3">
             {{ form.submit(class="btn bg-white text-black -btn-sm")}}
         </div>
     </form>
