atualizando templates e css

--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -16,87 +16,91 @@
             {{ form.birth_date.label }}
             {{ form.birth_date(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.raca_cor_etinia.label }}
             {{ form.raca_cor_etinia(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.gender.label }}
             {{ form.gender(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.marital_status.label }}
             {{ form.marital_status(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.nacionality.label }}
             {{ form.nacionality(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.nacionality_br.label }}
             {{ form.nacionality_br(class="") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.state.label }}
             {{ form.state(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.city.label }}
             {{ form.city(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.rg.label }}
             {{ form.rg(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.shipping_date_rg.label }}
             {{ form.shipping_date_rg(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.shipper_rg.label }}
             {{ form.shipper_rg(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.cpf.label }}
             {{ form.cpf(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.cnh.label }}
             {{ form.cnh(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.cep.label }}
             {{ form.cep(class="form-control") }}
         </div>
-         <div class="form-group  ">
+        <div class="form-group">
+            {{ form.address.label }}
+            {{ form.address(class="form-control") }}
+        </div>
+         <div class="form-group">
             {{ form.complement_address.label }}
             {{ form.complement_address(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.tel.label }}
             {{ form.tel(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.tel_message.label }}
             {{ form.tel_message(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.personal_email.label }}
             {{ form.personal_email(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.message_email.label }}
             {{ form.message_email(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.scholarity_progress.label }}
             {{ form.scholarity_progress(class="") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.scholarity_progress.label }}
             {{ form.scholarity_progress(class="") }}
         </div>
-        <div class="col-md col-md-offset-4"">
+        <div class="col-md col-md-offset-4">
             <h2>Informações sobre saúde</h2>
         </div>
         <div class="form-group">
