--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -18,195 +18,179 @@
             {{ form.birth_date.label }}
             {{ form.birth_date(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.raca_cor_etinia.label }}
             {{ form.raca_cor_etinia(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.gender.label }}
             {{ form.gender(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.marital_status.label }}
             {{ form.marital_status(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.nacionality.label }}
             {{ form.nacionality(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.nacionality_br.label }}
             {{ form.nacionality_br(class="") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.state.label }}
             {{ form.state(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.city.label }}
             {{ form.city(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.rg.label }}
             {{ form.rg(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.shipping_date_rg.label }}
             {{ form.shipping_date_rg(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.shipper_rg.label }}
             {{ form.shipper_rg(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.cpf.label }}
             {{ form.cpf(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.cnh.label }}
             {{ form.cnh(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.cep.label }}
             {{ form.cep(class="form-control") }}
         </div>
-         <div class="form-group  ">
+        <div class="form-group">
+            {{ form.address.label }}
+            {{ form.address(class="form-control") }}
+        </div>
+         <div class="form-group">
             {{ form.complement_address.label }}
             {{ form.complement_address(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.tel.label }}
             {{ form.tel(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.tel_message.label }}
             {{ form.tel_message(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.personal_email.label }}
             {{ form.personal_email(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.message_email.label }}
             {{ form.message_email(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.scholarity_progress.label }}
             {{ form.scholarity_progress(class="") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.school.label }}
             {{ form.school(class="form-control") }}
         </div>
-        <div class="form-group  ">
-            {{ form. school_term.label }}
-            {{ form. school_term(class="") }}
+        <div class="form-group">
+            {{ form.school_term.label }}
+            {{ form.school_term(class="") }}
         </div>
         <div class="col-md col-md-offset-4">
             <h2>Informações sobre saúde</h2>
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.pwd_person.label }}
             {{ form.pwd_person(class="") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form. pwd_person_affirmative.label }}
             {{ form. pwd_person_affirmative(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.carrier_of_chronic_disease.label }}
             {{ form.carrier_of_chronic_disease(class="") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form. carrier_of_chronic_disease_affirmative.label }}
             {{ form. carrier_of_chronic_disease_affirmative(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.vaccine_covid.label }}
             {{ form.vaccine_covid(class="form-control") }}
         </div>
         <div class="col-md col-md-offset-4">
             <h2>Informações sobre composição familiar</h2>
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.mame_mom.label }}
             {{ form.mame_mom(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.profession_mom.label }}
             {{ form.profession_mom(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.scholarity_mom.label }}
             {{ form.scholarity_mom(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.mame_dad.label }}
             {{ form.mame_dad(class="form-control") }}
-        </div> <div class="form-group  ">
+        </div> <div class="form-group">
             {{ form.profession_dad.label }}
             {{ form.profession_dad(class="form-control") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.scholarity_dad.label }}
             {{ form.scholarity_dad(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.children.label }}
             {{ form.children(class="") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.many_childrens.label }}
             {{ form.many_childrens(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.live_whith_parents.label }}
             {{ form.live_whith_parents(class="") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.lives_whith_other_family.label }}
             {{ form.lives_whith_other_family(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.many_people_live_house.label }}
             {{ form.many_people_live_house(class="form-control") }}
         </div>
-         <div class="col-md col-md-offset-4">
-            <h2>Informações sobre familiares que dividem o lar</h2>
-         </div>
-        <div class="form-group  ">
-            {{ form.children.label }}
-            {{ form.children(class="") }}
+        <div class="col-md col-md-offset-4">
+            <h2>Grupo Familiar</h2>
         </div>
-         <div class="form-group  ">
-            {{ form.many_childrens.label }}
-            {{ form.many_childrens(class="form-control") }}
-        </div>
-        <div class="form-group  ">
-            {{ form.live_whith_parents.label }}
-            {{ form.live_whith_parents(class="") }}
-        </div>
-        <div class="form-group  ">
-            {{ form.lives_whith_other_family.label }}
-            {{ form.lives_whith_other_family(class="form-control") }}
-        </div>
-        <div class="form-group  ">
-            {{ form.many_people_live_house.label }}
-            {{ form.many_people_live_house(class="form-control") }}
-        </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.member_family_name.label }}
-            {{ form.member_family_name(class="form-control") }}
+            {{ form.member_family_name(class="form-control ") }}
         </div>
-         <div class="form-group  ">
+         <div class="form-group">
             {{ form.degree_of_kinship.label }}
             {{ form.degree_of_kinship(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.age_member_family.label }}
             {{ form.age_member_family(class="form-control") }}
         </div>
-        <div class="form-group  ">
+        <div class="form-group">
             {{ form.income_member_family.label }}
             {{ form.income_member_family(class="form-control") }}
         </div>
