--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -74,6 +74,10 @@
             {{ form.address.label }}
             {{ form.address(class="form-control") }}
         </div>
+        <div class="form-group">
+            {{ form.house_number.label }}
+            {{ form.house_number(class="form-control") }}
+        </div>
          <div class="form-group">
             {{ form.complement_address.label }}
             {{ form.complement_address(class="form-control") }}
@@ -111,7 +115,7 @@
         </div>
          <div class="form-group">
             {{ form.pwd_person.label }}
-            {{ form.pwd_person(class="") }}
+            {{ form.pwd_person(class="form-control") }}
         </div>
          <div class="form-group">
             {{ form. pwd_person_affirmative.label }}
@@ -133,8 +137,8 @@
             <h2>Informações sobre composição familiar</h2>
         </div>
          <div class="form-group">
-            {{ form.mame_mom.label }}
-            {{ form.mame_mom(class="form-control") }}
+            {{ form.name_mom.label }}
+            {{ form.name_mom(class="form-control") }}
         </div>
          <div class="form-group">
             {{ form.profession_mom.label }}
@@ -145,8 +149,8 @@
             {{ form.scholarity_mom(class="form-control") }}
         </div>
          <div class="form-group">
-            {{ form.mame_dad.label }}
-            {{ form.mame_dad(class="form-control") }}
+            {{ form.name_dad.label }}
+            {{ form.name_dad(class="form-control") }}
         </div> <div class="form-group">
             {{ form.profession_dad.label }}
             {{ form.profession_dad(class="form-control") }}
@@ -160,16 +164,16 @@
             {{ form.children(class="") }}
         </div>
         <div class="form-group">
-            {{ form.many_childrens.label }}
-            {{ form.many_childrens(class="form-control") }}
+            {{ form.many_children.label }}
+            {{ form.many_children(class="form-control") }}
         </div>
         <div class="form-group">
-            {{ form.live_whith_parents.label }}
-            {{ form.live_whith_parents(class="") }}
+            {{ form.live_with_parents.label }}
+            {{ form.live_with_parents(class="") }}
         </div>
         <div class="form-group">
-            {{ form.lives_whith_other_family.label }}
-            {{ form.lives_whith_other_family(class="form-control") }}
+            {{ form.lives_with_other_family.label }}
+            {{ form.lives_with_other_family(class="form-control") }}
         </div>
         <div class="form-group">
             {{ form.many_people_live_house.label }}
