atualizando templates e css

--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -115,19 +115,19 @@
         </div>
          <div class="form-group">
             {{ form.pwd_person.label }}
-            {{ form.pwd_person(class="form-control") }}
+            {{ form.pwd_person(class="") }}
         </div>
          <div class="form-group">
-            {{ form. pwd_person_affirmative.label }}
-            {{ form. pwd_person_affirmative(class="form-control") }}
+            {{ form.pwd_person_affirmative.label }}
+            {{ form.pwd_person_affirmative(class="form-control") }}
         </div>
         <div class="form-group">
             {{ form.carrier_of_chronic_disease.label }}
             {{ form.carrier_of_chronic_disease(class="") }}
         </div>
          <div class="form-group">
-            {{ form. carrier_of_chronic_disease_affirmative.label }}
-            {{ form. carrier_of_chronic_disease_affirmative(class="form-control") }}
+            {{ form.carrier_of_chronic_disease_affirmative.label }}
+            {{ form.carrier_of_chronic_disease_affirmative(class="form-control") }}
         </div>
         <div class="form-group">
             {{ form.vaccine_covid.label }}
@@ -204,7 +204,7 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="formSubmit" class="container col-6 col-md-3">
+        <div id="buttonFormsub" class="container col-6 col-md-3">
             {{ form.submit(class="btn bg-white text-black -btn-sm")}}
         </div>
     </form>
