--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -198,7 +198,7 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="formSubmit" class="container col-6 col-md-3">
+        <div id="ButtonFormsub" class="container col-6 col-md-3">
             {{ form.submit(class="btn bg-white text-black -btn-sm")}}
         </div>
     </form>
