--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,7 @@
                 <sstrong>{{ form[field].label }}</sstrong>: {{ ', '.join(errors) }}
             </div>
         {% endfor %}
-        <div id="formSubmit" class="container col-6 col-md-3">
+        <div id="buttonRegister" class="container col-6 col-md-3">
             {{ form.submit(class="btn bg-white text-black -btn-sm justify-content-md-center")}}
         </div>
     </form>
