atualizando templates e css

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,18 @@
 <body>
 <main>
   <div id="chamada">
-    <h1>Prepare-se para o mecardo de trabalho conosco!</h1>
+    <h1>Prepare-se para o mecardo de trabalho conosco!<p></h1>
     <p>
-    <h3>Módulo Mundo do Trabalho
+    <h3><b>Módulo Mundo do Trabalho:</b>proteção de
+dados, Segurança da informação, Recursos
+Humanos, Tecnologia da Informação,
+Departamento Pessoal, Relação Humanas,
+Inteligência Emocional e Empreendedorismo
     <p>
     <p>
-    Módulo Mundo Contemporâneo
+    <b>Módulo Mundo Contemporâneo:</b>Cidadania, assuntos da contemporaneidade
     <p>
-    Módulo Extra Muros</h3>
+    <b>Módulo Extra Muros:</b>Passeios culturais pelo Rio de Janeiro</h3>
   </div>
 
   <article>
