--- a/templates/formsub.html
+++ b/templates/formsub.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}form-group
 {% block head %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/forms.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 <div class="container col-6 col-md-3">
     <h2>Registro de Aluno</h2>
 </div>
