--- a/templates/formsub_edit.html
+++ b/templates/formsub_edit.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
-
-<link rel="stylesheet" href="{{url_for('static', filename='css/forms.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 <div class="container col-6 col-md-3">
     <h2>{{ form.complete_name.data }}</h2>
 </div>
