--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <main>
   <div id="chamada">
-    <h1>Prepare-se para o mecardo de trabalho conosco!<p></h1>
+    <h1>Prepare-se para o mercado de trabalho conosco!<p></h1>
     <p>
     <h3><b>Módulo Mundo do Trabalho:</b>proteção de
 dados, Segurança da informação, Recursos
