--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block head %}
 
-
-
 <section class="vh-100" style="background-color: #030303;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -20,7 +18,7 @@
                   {{ form.hidden_tag() }}
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h1 fw-bold mb-0">Portal CTA</span>
+                    <span class="h1 fw-bold mb-0">Portal <b>CTA</b></span>
                   </div>
 
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Acesse sua conta</h5>
