--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block head %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/forms.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
 
     <h2 class="container col-6 col-md-3">Registro de Aluno</h2>
 </div>
